--- a/client/index.html
+++ b/client/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image" href="icon.png" />
+    <link rel="stylesheet" href="https://webchat-styler-css.botpress.app/prod/584282f7-1573-4252-a2c0-469f3e80d272/v58337/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Sugarpine National</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
+    <script src="https://mediafiles.botpress.cloud/a7441ae3-d71b-4011-b8a9-960468c5f48b/webchat/config.js" defer></script>
   </body>
 </html>
